--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.2",
+    "@upstash/qstash-cli": "^2.21.1",
+    "@upstash/workflow": "^0.2.7",
     "bcryptjs": "^3.0.0",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
